# discolike-cli

./: CLAUDE.md  LICENSE  PRD.md  README.md  SETUP.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
reference/: discolike-field-reference.md  discolike-workflow.md
src/discolike/: __init__.py  cache.py  cli.py  client.py  config.py  constants.py  cost.py  errors.py  output.py  types.py
src/discolike/commands/: __init__.py  account.py  append.py  config_cmd.py  contacts.py  costs_cmd.py  discover.py  enrich.py  extract.py  match.py  plan_gate.py  saved.py  subsidiaries.py  vendors.py  workflow.py
src/discolike/exporters/: csv_export.py  json_export.py
tests/: conftest.py  test_cache.py  test_client.py  test_config.py  test_cost.py  test_output.py
tests/commands/: test_account.py  test_config.py  test_costs.py  test_discover.py  test_enrich.py  test_extract.py  test_plan_gate.py  test_saved.py  test_workflow.py
tests/fixtures/: account_status.json  business_profile.json  discover_results.json  extract_result.json  growth_result.json  save_exclusion.json  saved_queries.json  score_result.json
